Kleopatra: Don't select items automatically when tree view/widget gets focus
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Aug 8 2024, 11:14 AM
Tags

Description

To ensure that orca announces the current item when a tree view/widget gets focus, I added a workaround which re-set the current item (with setCurrentItem(nullptr); setCurrentItem(current);). Side effects of this workaround are that the current item is selected and that selection change events are sent to assistive tools. The first side effect is not always desired (https://dev.gnupg.org/T6936#187185) and the second side effect is likely never desired.

I have already added an improved work around for the users of Kleo::TreeWidget with rLIBKLEO1eb85711. The same improved workaround should also be used for other tree views and tree widgets.

Event Timeline

ikloecker created this task.
ikloecker changed the task status from Open to Testing.Aug 8 2024, 11:48 AM
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Should be tested with NVDA on Windows to verify that this works as expected and that we don't get duplicate announcements by the screen reader.

Backported for VSD 3.3

gpg4win-beta-50: There are no duplicate announcements of the entries in the result table of a keysearch with NVDA

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo moved this task from WiP to vsd-3.3.0 on the vsd33 board.
ebo edited projects, added vsd33 (vsd-3.3.0); removed vsd33.