Use improved workaround for accessible focus event

Replace the old workaround with the improved workaround used for
Kleo::TreeWidget.

GnuPG-bug-id: 7245
(cherry picked from commit 1259d469fa3570c1c1b1c9bb541352b0e065be96)